# mlschool

./: .gitignore  README.md  env.example  env.tests  pipeline_runner.py  pyproject.toml
mlschool/: __init__.py  pipeline.py  pre_processing_step.py  preprocessor.py  session.py  settings.py
tests/: test_pipeline.py  test_pre_processing_step.py  test_preprocessor.py  test_session.py  test_settings.py
