[tool.poetry]
name = "mlschool"
version = "0.1.0"
description = ""
authors = ["Carlos Capote Pérez-Andreu <carlos.capote@hawara.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sagemaker = "^2.207.1"
boto3 = "^1.34.37"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
